<?xml version="1.0" encoding="utf-8"?>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context="com.example.rach.recipe.MainActivity"
        tools:showIn="@layout/app_bar_main">

         <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:id="@+id/top"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:background="@drawable/cover"
                android:clickable="true">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_horizontal"
                    android:layout_marginTop="50dp"
                    android:textSize="30dp"
                    android:text="@string/what"
                    android:id="@+id/tv1"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/pasta"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_alignParentStart="true"
                android:clickable="true"
                >
                <ImageView
                    style="@style/main_show_img"
                    android:background="@drawable/pasta"
                    />
                <TextView
                    style="@style/main_show_text"
                    android:text="@string/pasta"/>


            </LinearLayout>

            <LinearLayout
                android:id="@+id/desert"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_alignParentStart="true"
                android:clickable="true"
                >
                <TextView
                    style="@style/main_show_text"
                    android:text="@string/dessert"/>
                <ImageView
                    style="@style/main_show_img"
                    android:background="@drawable/dessert"
                    />

            </LinearLayout>
            <LinearLayout
                android:id="@+id/rice"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_alignParentStart="true"
                android:clickable="true"
                >
                <ImageView
                    style="@style/main_show_img"
                    android:background="@drawable/rice1"
                    />
                <TextView
                    style="@style/main_show_text"
                    android:text="@string/rice" />


            </LinearLayout>
            <LinearLayout
                android:id="@+id/steak"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_alignParentStart="true"
                android:clickable="true"
                >
                <TextView
                    style="@style/main_show_text"
                    android:text="@string/steak" />
                <ImageView
                    android:background="@drawable/steak"
                    style="@style/main_show_img"
                    />

            </LinearLayout>
            <LinearLayout
                android:id="@+id/salad"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_alignParentStart="true"
                android:clickable="true"
                >
                <ImageView
                    style="@style/main_show_img"
                    android:background="@drawable/salad"
                    />
                <TextView
                    style="@style/main_show_text"
                    android:text="@string/salad"
                    />
            </LinearLayout>
        </LinearLayout><!--outside-->
    </ScrollView>
   </LinearLayout>




